--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav class="main-nav">
                     <a href="./index.html" class="logo" lang="en"><span class="web-logo">Web</span>Studio</a>
                     <ul class="header-menu">
-                        <li class="header-menu-item">
+                        <li class="header-menu-item line">
                             <a class="menu-link menu-link-current" href="">Студия</a>
                         </li>
                         <li class="header-menu-item">
