--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                     <li class="header-menu-item">
                         <a class="menu-link " href="/index.html">Студия</a>
                     </li>
-                    <li class="header-menu-item">
+                    <li class="header-menu-item line">
                         <a class="menu-link menu-link-current" href="">Портфолио</a>
                     </li>
                     <li class="header-menu-item">
@@ -77,7 +77,13 @@
                 <ul class="aside">
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img class="image" src="./images/img11.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img11.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                    та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                    відомості про компанію чи приватну особу.
+                                </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Технокряк</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -86,7 +92,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
+                            <div class="slider">
                             <img src="./images/img22.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                                    </div>
                                 <div class="aside-info">
                                     <h2 class="portfolio-item">Постер New Orlean vs Golden Star</h2>
                                     <p class="portfolio-text">Дизайн</p>
@@ -95,7 +107,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img33.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img33.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Ресторан Seafood</h2>
                                 <p class="portfolio-text">Приложение</p>
@@ -104,7 +122,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img44.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img44.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Проект Prime</h2>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -113,7 +137,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img55.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img55.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Проект Boxes</h2>
                                 <p class="portfolio-text">Приложение</p>
@@ -122,7 +152,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img66.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img66.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Inspiration has no Borders</h2>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -131,7 +167,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img77.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img77.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Издание Limited Edition</h2>
                                 <p class="portfolio-text">Дизайн</p>
@@ -140,7 +182,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img88.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img88.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Проект LAB</h2>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -149,7 +197,13 @@
                     </li>
                     <li class="aside-block">
                         <a href="" class="card-link">
-                            <img src="./images/img99.jpg" width="370" alt="">
+                            <div class="slider">
+                                <img src="./images/img99.jpg" width="370" alt="">
+                                <p class="text-slider">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу 
+                                        та сервісів. Все це дозволить відвідувачу отримати вичерпні 
+                                        відомості про компанію чи приватну особу.
+                                    </p>
+                            </div>
                             <div class="aside-info">
                                 <h2 class="portfolio-item">Growing Business</h2>
                                 <p class="portfolio-text">Приложение</p>
